--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Mid-4/">https://baay22.github.io/Mid-4/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Midstream+Marketing/Mid-4/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Midstream+Marketing/Mid-4/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Midstream+Marketing/Mid-4/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Midstream+Marketing/Mid-4/index.html</a><br>
+                <a target="_bLank" href="https://melodic-croissant-7c8cbe.netlify.app">https://melodic-croissant-7c8cbe.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
